changed the word color in the portfolio

--- a/css/agency.css
+++ b/css/agency.css
@@ -333,7 +333,7 @@ section h3.section-subheading {
   text-align: center;
   top: 50%;
   margin-top: -12px;
-  color: white;
+  color: black;
 }
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
   margin-top: -12px;
